--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,11 +1,10 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - prasadshreyas
 
 github_repos:
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
+  - prasadshreyas/handy-ml
+  - prasadshreyas/handy-py
+  - prasadshreyas/Spotify-RecSys-WebApp
   - jquery/jquery
   - FortAwesome/Font-Awesome
   - jpswalsh/academicons
